--- a/info.yaml
+++ b/info.yaml
@@ -1,10 +1,10 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     0       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        ""      # Project title
-  author:       ""      # Your name
+  wokwi_id:     424253104192244737       # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "workshop_AND_GATE"      # Project title
+  author:       "Ryan_Graziano"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "Workshop_And_Gate"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -15,18 +15,18 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "A"
+  ui[1]: "B"
+  ui[2]: "C"
+  ui[3]: "D"
+  ui[4]: "E"
+  ui[5]: "F"
+  ui[6]: "G"
+  ui[7]: "H"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
+  uo[0]: "OA"
+  uo[1]: "OB"
   uo[2]: ""
   uo[3]: ""
   uo[4]: ""
